@@ -1,5 +1,0 @@
-A D/contrib////
-A D/lisp////
-A D/test////
-A D/texi////
-A D/tramp2////
