@@ -1,3 +1,8 @@
+2011-09-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-sh-handle-file-name-all-completions): Fix
+	nasty bug using wrong cached values.
+
 2011-09-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-shell-command): Set process sentinel and
